# peer-tutor-api/mongoSeed.py
@@ -15,10 +15,12 @@ studentCol.insert_one(student1)
 studentCol.insert_one(student2)
 
 meetingCol = mydb["meeting"]
-meeting1 = {"meeting_id": "01", "peer_id": "00001", "tutor_id": "10001"}
-meeting2 = {"meeting_id": "02", "peer_id": "00002", "tutor_id": "10002", }
+meeting1 = {"meeting_id": "06", "peer_id": "00011", "tutor_id": "10001"}
+meeting2 = {"meeting_id": "02", "peer_id": "00011", "tutor_id": "10002", }
 meetingCol.insert_one(meeting1)
 meetingCol.insert_one(meeting2)
+
+
 
 
 print("inserted")
